Edit StockController